added in ipcmain to allow communication from the front-end to electron, basic test message working. will need to consider interactions with both sides talking, obviously database interactions and bot parts

--- a/src/app/views/main-landing-view/main-landing-view.component.html
+++ b/src/app/views/main-landing-view/main-landing-view.component.html
@@ -1,3 +1,6 @@
-<p>
-  main-landing-view works!
-</p>
+<div class="main-landing-container">
+  <h1>Landing page</h1>
+  <button type="button" name="test" (click)="onButtonPressed()"  class="btn btn-dark btn-lg btn-block">
+    Test
+  </button>
+</div>
