added in two way commincation between angular and electron also added the ability to start and stop the current bot next will need to start playing around with more communications then will be looking at creating a bot blueprint in JSON to hold the bot

--- a/src/app/views/main-landing-view/main-landing-view.component.html
+++ b/src/app/views/main-landing-view/main-landing-view.component.html
@@ -3,4 +3,7 @@
   <button type="button" name="test" (click)="onButtonPressed()"  class="btn btn-dark btn-lg btn-block">
     Test
   </button>
+  <button type="button" name="test" (click)="onBotInitBtn()"  class="btn btn-dark btn-lg btn-block">
+    Bot {{initBot? 'destroy' : 'start'}}
+  </button>
 </div>
