--- a/src/app/views/main-landing-view/main-landing-view.component.html
+++ b/src/app/views/main-landing-view/main-landing-view.component.html
@@ -6,4 +6,14 @@
   <button type="button" name="test" (click)="onBotInitBtn()"  class="btn btn-dark btn-lg btn-block">
     Bot {{initBot? 'destroy' : 'start'}}
   </button>
+  <div class="set-name">
+    <div class="form-group">
+      <label for=""></label>
+      <input type="text"
+        class="form-control" name="botName" id="" [(ngModel)]="botName" placeholder="bot name">
+    </div>
+    <button type="button" name="test" (click)="onBotNamePress()"  class="btn btn-dark btn-lg btn-block">
+      Set Name
+    </button>
+  </div>
 </div>
