small changes, will start to build out the frontend next and put some of the design down. hopefully this will give me a better understanding on where to take the program

--- a/src/app/views/main-landing-view/main-landing-view.component.html
+++ b/src/app/views/main-landing-view/main-landing-view.component.html
@@ -3,7 +3,7 @@
   <button type="button" name="test" (click)="onButtonPressed()"  class="btn btn-dark btn-lg btn-block">
     Test
   </button>
-  <button type="button" name="test" (click)="onBotInitBtn()"  class="btn btn-dark btn-lg btn-block">
+  <button type="button" name="create" (click)="onBotInitBtn()"  class="btn btn-dark btn-lg btn-block">
     Bot {{initBot? 'destroy' : 'start'}}
   </button>
   <div class="set-name">
@@ -12,7 +12,7 @@
       <input type="text"
         class="form-control" name="botName" id="" [(ngModel)]="botName" placeholder="bot name">
     </div>
-    <button type="button" name="test" (click)="onBotNamePress()"  class="btn btn-dark btn-lg btn-block">
+    <button type="button" name="name" (click)="onBotNamePress()"  class="btn btn-dark btn-lg btn-block">
       Set Name
     </button>
   </div>
