--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+html, body{
+    height: 100%;
+    margin: 0;
+}
+.main-topbar{
+    height: 50px;
+    margin-bottom: -50px;
+}
+.main-landing-container{
+    min-height: 100vh;
+    .main-landing-content{
+        padding: 20px;
+        padding-bottom: 50px;
+        .main-body{
+            margin: 50px auto 50px auto;
+            width: 80%;
+        }
+    }
+}
+.main-footer{
+    height: 50px;
+    margin-top: -50px;
+}
