basic bottom bar layout added next will add the top bar then wil lstart to add content to them

--- a/src/app/features/components/footer/footer.component.html
+++ b/src/app/features/components/footer/footer.component.html
@@ -1,3 +1,22 @@
-<p>
-  footer works!
-</p>
+<div class="main-footer">
+  <div class="footer-content">
+    <div class="uptime">
+      uptime: 10 mins 1 sec
+    </div>
+    <div class="bog-log">
+      log
+    </div>
+    <div class="bot-info">
+      info
+    </div>
+    <div class="middle">
+
+    </div>
+    <div class="bot-name">
+      Bot name
+    </div>
+    <div class="bot-status">
+      online
+    </div>
+  </div>
+</div>
