general style implemented for the overall layout need to hook up the start button basically as previously

--- a/src/app/features/components/topbar/topbar.component.html
+++ b/src/app/features/components/topbar/topbar.component.html
@@ -1,3 +1,23 @@
-<p>
-  topbar works!
-</p>
+<div class="topbar">
+  <div class="topbar-content">
+    <div class="logo">
+      DISCORDANT
+    </div>
+    <div class="middle">
+  
+    </div>
+    <div class="quick-select">
+      <mat-form-field >
+        <mat-select [(value)] = "quickSelection" (selectonChange)="onQuickSelectChange($event)">
+            <mat-option value = "test">Test</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="quick-start">
+      <button mat-button color="primary">Start</button>
+    </div>
+    <div class="menu-icon">
+      <i class="material-icons">menu</i>
+    </div>
+  </div>
+</div>
