added in some basic cross component listening with the start button triggering the footer display next to add in what will happen in the main body when it is online need to consider a consistent object to pass to and from the bot

--- a/src/app/features/components/footer/footer.component.html
+++ b/src/app/features/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="main-footer">
+<div class="main-footer" [hidden]="barIsHidden">
   <div class="footer-content">
     <div class="uptime">
       uptime: 10 mins 1 sec
